# RustNotePad

./: .gitignore  AGENT.md  Cargo.toml  Develop_Diary.md  IMPLEMENTATION.md  LICENSE  README.md  package-lock.json  package.json  profile.properties
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: convert.rs  e2e_roundtrip.rs  plugin.rs  search.rs  settings.rs
assets/langs/: en-US.json  zh-TW.json
assets/themes/: midnight_indigo.json  nordic_daylight.json  notepad_classic.json
changes/20251125_status_bar_layout_fix/: CHANGELOG.md  INDEX.md  README.md  TECHNICAL_DETAILS.md  apply_fix.sh  fix.patch  manual_test.md  run_all_tests.sh  verify_fix.sh
crates/autocomplete/: Cargo.toml
crates/autocomplete/src/: lib.rs
crates/cmdline/: Cargo.toml
crates/cmdline/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: bookmarks.rs  column_ops.rs  document.rs  document_map.rs  editor.rs  file_monitor.rs  folding.rs  lib.rs  line_ops.rs  recovery.rs  search_session.rs  split_view.rs
crates/function_list/: Cargo.toml
crates/function_list/src/: lib.rs
crates/highlight/: Cargo.toml
crates/highlight/src/: language.rs  lib.rs  theme.rs  udl.rs
crates/lsp_client/: Cargo.toml
crates/lsp_client/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/plugin_admin/: Cargo.toml
crates/plugin_admin/src/: lib.rs
crates/plugin_host/: Cargo.toml
crates/plugin_host/src/: lib.rs
crates/plugin_wasm/: Cargo.toml
crates/plugin_wasm/src/: lib.rs
crates/plugin_winabi/: Cargo.toml
crates/plugin_winabi/src/: lib.rs
crates/plugin_winabi/tests/: windows_abi.rs
crates/printing/: Cargo.toml
crates/printing/src/: controller.rs  display.rs  job.rs  layout.rs  lib.rs  platform.rs  preview.rs  template.rs
crates/printing/tests/: display_snapshot.rs  pipeline.rs
crates/printing/tests/snapshots/: simple_display.ron
crates/project/: Cargo.toml
crates/project/src/: lib.rs  serde_path.rs  session.rs  tree.rs  tree_store.rs  util.rs  workspace.rs
crates/runexec/: Cargo.toml
crates/runexec/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: associations.rs  json.rs  layout.rs  lib.rs  localization.rs  preferences.rs  recent.rs  snippets.rs  storage.rs  theme.rs
crates/settings/tests/: localization_tests.rs  preferences_store.rs  theme_tmtheme_import.rs  ui_layout_regression.rs
docker/sandbox/: Dockerfile
docs/: AGENT_EN.md  sandbox.md
docs/feature_parity/: README.md
docs/feature_parity/01-files-encoding-eol/: README.md  compatibility.md  design.md  tutorial.md
docs/feature_parity/01-files-encoding-eol/tests/: README.md
docs/feature_parity/02-editing/: README.md  compatibility.md  design.md
docs/feature_parity/02-editing/tests/: README.md
docs/feature_parity/03-search-replace/: README.md  compatibility.md  design.md  tutorial.md
docs/feature_parity/03-search-replace/tests/: README.md
docs/feature_parity/04-view-interface/: README.md  compatibility.md  design.md  tutorial.md
docs/feature_parity/04-view-interface/tests/: README.md
docs/feature_parity/05-syntax-highlighting-udl/: README.md  compatibility.md  design.md
docs/feature_parity/05-syntax-highlighting-udl/tests/: README.md
docs/feature_parity/06-autocomplete-function-list/: README.md  compatibility.md  design.md
docs/feature_parity/06-autocomplete-function-list/tests/: README.md
docs/feature_parity/07-macros-run/: README.md  compatibility.md  design.md
docs/feature_parity/07-macros-run/tests/: README.md
docs/feature_parity/08-sessions-projects-workspaces/: README.md  compatibility.md  design.md
docs/feature_parity/08-sessions-projects-workspaces/tests/: README.md
docs/feature_parity/09-printing/: README.md  compatibility.md  design.md
docs/feature_parity/09-printing/tests/: README.md
docs/feature_parity/09-printing/tests/pagination/: simple_text.ron
docs/feature_parity/10-command-line/: README.md  compatibility.md  design.md
docs/feature_parity/10-command-line/tests/: README.md
docs/feature_parity/11-plugins/: README.md  compatibility.md  design.md  security_review.md  wasm_parity.md
docs/feature_parity/11-plugins/tests/: README.md
docs/feature_parity/12-localization-preferences/: README.md  compatibility.md  design.md
docs/feature_parity/12-localization-preferences/reference/: notepadpp_en_reference.json
docs/feature_parity/12-localization-preferences/tests/: README.md
docs/plugins/: authoring.md
e2e/: README.md  status_bar.spec.ts  tauri-test.js
rust_sandbox_test/: Cargo.toml
rust_sandbox_test/src/: check_fonts.rs  check_tweak.rs
rustnotepad_gui/: Cargo.toml
rustnotepad_gui/src/: main.rs
scripts/: build-all-targets.sh  build_rustnotepad.sh  package-platform-binaries.sh
scripts/dev/: build_rustnotepad.sh  run_sandbox_tests.sh
scripts/dev/l10n-compiler/: Cargo.toml
scripts/dev/l10n-compiler/src/: main.rs
src/: main.rs
tests/: search_large_workspace.rs  search_workflow.rs
