[workspace]
members = [
    "rustnotepad_gui",
    "crates/cmdline",
    "crates/autocomplete",
    "crates/core",
    "crates/highlight",
    "crates/function_list",
    "crates/lsp_client",
    "crates/macros",
    "crates/printing",
    "crates/project",
    "crates/runexec",
    "crates/settings",
    "crates/search",
    "apps/cli",
    "rust_sandbox_test",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["RustNotePad contributors"]

[workspace.dependencies]
eframe = { version = "0.25", features = ["default_fonts", "glow"] }
egui = "0.25"
once_cell = "1.19"
thiserror = "1.0"
encoding_rs = "0.8"
chardetng = "0.1"
base64 = "0.21"
regex = "1.10"
