[package]
name = "rustnotepad_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
once_cell = { workspace = true }
rustnotepad_settings = { path = "../crates/settings" }
rustnotepad_autocomplete = { path = "../crates/autocomplete" }
rustnotepad_function_list = { path = "../crates/function_list" }
rustnotepad_highlight = { path = "../crates/highlight" }
rustnotepad_lsp_client = { path = "../crates/lsp_client" }

[[bin]]
name = "rustnotepad"
path = "src/main.rs"
