[package]
name = "rustnotepad_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
once_cell = { workspace = true }
rustnotepad_settings = { path = "../crates/settings" }
rustnotepad_autocomplete = { path = "../crates/autocomplete" }
rustnotepad_function_list = { path = "../crates/function_list" }
rustnotepad_highlight = { path = "../crates/highlight" }
rustnotepad_lsp_client = { path = "../crates/lsp_client" }
rustnotepad_macros = { path = "../crates/macros" }
rustnotepad_runexec = { path = "../crates/runexec" }
rustnotepad_project = { path = "../crates/project" }
rustnotepad_printing = { path = "../crates/printing" }
ab_glyph = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
image = { version = "0.24", default-features = false, features = ["png"] }

[[bin]]
name = "rustnotepad"
path = "src/main.rs"
