[package]
name = "rustnotepad_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustnotepad-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rustnotepad_core = { path = "../../crates/core" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
encoding_rs = { workspace = true }
