[package]
name = "rustnotepad_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustnotepad-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rustnotepad_core = { path = "../../crates/core" }
rustnotepad_search = { path = "../../crates/search" }
rustnotepad_plugin_admin = { path = "../../crates/plugin_admin" }
rustnotepad_plugin_wasm = { path = "../../crates/plugin_wasm" }
rustnotepad_settings = { path = "../../crates/settings" }
walkdir = "2.5"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
encoding_rs = { workspace = true }
