[package]
name = "rustnotepad_core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
encoding_rs = { workspace = true }
chardetng = { workspace = true }
base64 = { workspace = true }
notify = { version = "6.1", default-features = true }

[dev-dependencies]
tempfile = "3.10"
