[package]
name = "rustnotepad_highlight"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = { workspace = true }
regex = { version = "1.10", default-features = false, features = ["std", "unicode"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
quick-xml = { version = "0.31", features = ["serialize", "encoding"] }
