[package]
name = "rustnotepad_plugin_admin"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustnotepad_plugin_wasm = { path = "../plugin_wasm" }
rustnotepad_plugin_winabi = { path = "../plugin_winabi" }

[dev-dependencies]
tempfile = "3.10"
