[package]
name = "rustnotepad_plugin_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
base64 = "0.21"
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3.10"
