[package]
name = "rustnotepad_plugin_winabi"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
libloading = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(target_os = "windows")'.dependencies]
libloading = { version = "0.8" }

[target.'cfg(target_os = "windows")'.dev-dependencies]
cc = "1.0"
