[package]
name = "rustnotepad_settings"
version = "0.1.0"
edition = "2021"


[dependencies]
base64 = { workspace = true }
rustnotepad_highlight = { path = "../highlight" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
quick-xml = { version = "0.31", features = ["encoding"] }
icu_locid = "1.5"
icu_plurals = { version = "1.5", features = ["compiled_data"] }

[dev-dependencies]
tempfile = "3.10"
